--- a/src/style.css
+++ b/src/style.css
@@ -314,6 +314,8 @@ button#status-2.Mui-selected{
 
 .paginator>li>a {
     padding: .5rem 1rem;
+    height: 2.5rem;
+    min-width: 2.5rem;
     display: flex;
     justify-content: center;
     width: auto;
