--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ body *, html * {
 
 :root{
     --ps-gray-25: hsl(240, 20%, 99%);
-    --ps-gray-50: hwb(210 98% 2%);
+    --ps-gray-50: hsl(210, 20%, 98%);
     --ps-gray-100: hsl(216, 24%, 96%);
     --ps-gray-200: hsl(218, 17%, 91%);
     --ps-gray-300: hsl(217, 16%, 84%);
@@ -170,6 +170,25 @@ small {
 }
 
 /* BUTTONS */
+
+.btn-ps-basic {
+    font-weight: 500;
+    --bs-btn-color: var(--ps-text-75);
+    --bs-btn-bg: white;
+    --bs-btn-border-color: var(--ps-gray-300);
+    --bs-btn-hover-color: var(--ps-text-75);
+    --bs-btn-hover-bg: var(--ps-gray-50);
+    --bs-btn-hover-border-color: var(--ps-gray-300);
+    --bs-btn-focus-shadow-rgb: 249,250,251;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #0a58ca;
+    --bs-btn-active-border-color: #0a53be;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #0d6efd;
+    --bs-btn-disabled-border-color: #0d6efd;
+    box-shadow: var(--ps-shadow);
+}
 
 .btn-ps-prim {
     font-weight: 500;
