--- a/src/style.css
+++ b/src/style.css
@@ -434,9 +434,55 @@ tr>td:last-child {
 
 /* DROPDOWNS */
 
-.dropdown-item {
+.dropdown-menu {
+    width: 17rem;
+}
+
+.expendable-item {
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.expendable-item:hover,
+.expendable-item:focus  {
+    background-color: var(--ps-prim-50);    
+    color: var(--ps-prim-600);
+}
+
+.btn-collapsable {
+    overflow: hidden;
+    border: 1px solid var(--ps-border-color);
+    border-radius: .375rem;
+
+    box-shadow: var(--ps-shadow);
+}
+
+.btn-collapsable * {
     font-weight: 500;
 }
+
+.btn-collapsable:hover {
+    border-color: var(--ps-prim-100);
+}
+
+.btn-ps-collapsing {
+    --bs-btn-color: var(--ps-text-50);
+    --bs-btn-bg: transparent;
+    --bs-btn-border-color: transparent;
+    --bs-btn-hover-color: var(--ps-prim-600);
+    --bs-btn-hover-bg: var(--ps-prim-100);
+    --bs-btn-hover-border-color: var(--ps-prim-100);
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #0a58ca;
+    --bs-btn-active-border-color: #0a53be;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #0d6efd;
+    --bs-btn-disabled-border-color: #0d6efd;
+    
+}
+
+
 
 /* CHECKBOXES */
 
@@ -461,7 +507,6 @@ table,
 table .btn,
 table .dropdown-item {
     font-size: 14px;
-    font-weight: 500;
 }
 
 .nav-link {
@@ -835,12 +880,6 @@ span#status-2{
 
 .status-description {
     font-weight: 500;
-}
-
-.dropdown-item:focus, .dropdown-item:hover {
-	color: var(--ps-table-hover-color);
-	background-color: var(--ps-background);
-    border-radius: .375rem;
 }
 
 .dropdown-menu .dropdown-item:first-child {
