--- a/src/style.css
+++ b/src/style.css
@@ -175,6 +175,26 @@ small {
     box-shadow: none;
 }
 
+.btn-ps-basic {
+    font-weight: 500;
+    --bs-btn-color: var(--ps-text-75);
+    --bs-btn-bg: white;
+    --bs-btn-border-color: var(--ps-gray-300);
+    --bs-btn-hover-color: var(--ps-text-75);
+    --bs-btn-hover-bg: var(--ps-gray-50);
+    --bs-btn-hover-border-color: var(--ps-gray-300);
+    --bs-btn-focus-shadow-rgb: 242, 244, 247;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: white;
+    --bs-btn-active-border-color: var(--ps-gray-300);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: var(--ps-gray-200);
+    --bs-btn-disabled-border-color: var(--ps-gray-300);
+    box-shadow: var(--ps-shadow);
+}
+
+
 .btn-ps-prim {
     font-weight: 500;
     --bs-btn-color: white;
@@ -185,8 +205,8 @@ small {
     --bs-btn-hover-border-color: var(--ps-prim-700);
     --bs-btn-focus-shadow-rgb: 244,235,255;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #0a58ca;
-    --bs-btn-active-border-color: #0a53be;
+    --bs-btn-active-bg: var(--ps-prim-700);
+    --bs-btn-active-border-color: var(--ps-prim-700);
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: var(--ps-prim-200);
@@ -237,7 +257,7 @@ small {
 
 .btn-ps-dropdown-item {
     font-weight: 500;
-    --bs-btn-color: var(--ps-text);
+    --bs-btn-color: var(--ps-text-50);
     --bs-btn-bg: transparent;
     --bs-btn-border-color: transparent;
     --bs-btn-hover-color: black;
@@ -440,12 +460,15 @@ tr>td:last-child {
 
 .expendable-item {
     font-weight: 500;
-    font-size: 14px;
 }
 
 .expendable-item:hover,
 .expendable-item:focus  {
-    background-color: var(--ps-gray-100);    
+    background-color: var(--ps-gray-50);    
+}
+
+.filter-check-icon {
+    color: var(--ps-prim-700)
 }
 
 .btn-collapsable {
