--- a/src/style.css
+++ b/src/style.css
@@ -121,20 +121,22 @@
 }
 
 
-body, html {
-    font-family: "Inter","Helvetica","Arial",sans-serif !important;
+body,
+html {
+    font-family: "Inter", "Helvetica", "Arial", sans-serif !important;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     min-height: -webkit-fill-available;
     background-color: white;
 }
 
-body *, html * {
-    font-family: "Inter","Helvetica","Arial",sans-serif !important;
+body *,
+html * {
+    font-family: "Inter", "Helvetica", "Arial", sans-serif !important;
     font-weight: 500;
 }
 
-:root{
+:root {
     --ps-gray-25: hsl(240, 20%, 99%);
     --ps-gray-50: hsl(210, 20%, 98%);
     --ps-gray-100: hsl(216, 24%, 96%);
@@ -146,7 +148,7 @@ body *, html * {
     --ps-gray-700: hsl(218, 24%, 27%);
     --ps-gray-800: hsl(214, 33%, 17%);
     --ps-gray-900: hsl(220, 43%, 11%);
-    
+
     --ps-prim-25: hsl(264, 100%, 99%);
     --ps-prim-50: hsl(264, 100%, 98%);
     --ps-prim-100: hsl(267, 100%, 96%);
@@ -212,8 +214,8 @@ body *, html * {
     --ps-text-75: var(--ps-gray-700);
     --ps-text-50: var(--ps-gray-500);
     --ps-text-25: var(--ps-gray-300);
-    
-    
+
+
     --ps-border-color: var(--ps-gray-200);
     --ps-border-color-50: var(--ps-gray-100);
 
@@ -270,7 +272,7 @@ small {
     color: var(--ps-gray-900)
 }
 
-.form-control, 
+.form-control,
 .form-select {
     font-weight: 500;
     color: var(--ps-gray-900);
@@ -285,8 +287,9 @@ small {
     box-shadow: 0 0 0 .25rem var(--ps-prim-50)
 }
 
-.form-control.is-invalid, .was-validated .form-control:invalid {
-	border-color: var(--ps-error-300);
+.form-control.is-invalid,
+.was-validated .form-control:invalid {
+    border-color: var(--ps-error-300);
 }
 
 /* BUTTONS */
@@ -299,7 +302,7 @@ small {
     --bs-btn-hover-color: var(--ps-text-75);
     --bs-btn-hover-bg: var(--ps-gray-50);
     --bs-btn-hover-border-color: var(--ps-gray-300);
-    --bs-btn-focus-shadow-rgb: 249,250,251;
+    --bs-btn-focus-shadow-rgb: 249, 250, 251;
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #0a58ca;
     --bs-btn-active-border-color: #0a53be;
@@ -342,7 +345,7 @@ small {
     --bs-btn-hover-color: white;
     --bs-btn-hover-bg: var(--ps-prim-700);
     --bs-btn-hover-border-color: var(--ps-prim-700);
-    --bs-btn-focus-shadow-rgb: 244,235,255;
+    --bs-btn-focus-shadow-rgb: 244, 235, 255;
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: var(--ps-prim-700);
     --bs-btn-active-border-color: var(--ps-prim-700);
@@ -390,7 +393,7 @@ small {
     --bs-btn-active-shadow: inset 0 3px 5px var(--ps-prim-25);
     --bs-btn-disabled-color: var(--ps-prim-300);
     --bs-btn-disabled-bg: var(--ps-prim-25);
-    --bs-btn-disabled-border-color: var(--ps-prim-300); 
+    --bs-btn-disabled-border-color: var(--ps-prim-300);
     box-shadow: var(--ps-shadow);
 }
 
@@ -431,10 +434,10 @@ small {
     color: var(--ps-text-50);
     background-color: transparent;
     transition: all .25s ease-out;
-    
+
 }
 
-button#status-0.Mui-selected{
+button#status-0.Mui-selected {
     font-weight: 500;
     background-color: white;
     color: var(--ps-accent-1-600);
@@ -443,7 +446,7 @@ button#status-0.Mui-selected{
 
 }
 
-button#status-1.Mui-selected{
+button#status-1.Mui-selected {
     font-weight: 500;
     background-color: white;
     color: var(--ps-succ-700);
@@ -452,7 +455,7 @@ button#status-1.Mui-selected{
 
 }
 
-button#status-2.Mui-selected{
+button#status-2.Mui-selected {
     font-weight: 500;
     background-color: white;
     color: var(--ps-accent-2-700);
@@ -507,7 +510,7 @@ button#status-2.Mui-selected{
 }
 
 .paginator>li:first-child>a,
-.paginator>li:last-child>a  {
+.paginator>li:last-child>a {
     border: 1px solid var(--ps-border-color);
     border-radius: .375rem;
     box-shadow: var(--ps-shadow);
@@ -557,7 +560,7 @@ tr>td:last-child {
 }
 
 /* every cell */
-.table > :not(caption) > * > * {
+.table> :not(caption)>*>* {
     padding: 1rem 1rem;
     height: 2.25rem;
 }
@@ -607,8 +610,8 @@ tr>td:last-child {
 }
 
 .expendable-item:hover,
-.expendable-item:focus  {
-    background-color: var(--ps-gray-50);    
+.expendable-item:focus {
+    background-color: var(--ps-gray-50);
 }
 
 .filter-check-icon {
@@ -640,7 +643,7 @@ tr>td:last-child {
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #0d6efd;
     --bs-btn-disabled-border-color: #0d6efd;
-    
+
 }
 
 
@@ -648,11 +651,11 @@ tr>td:last-child {
 /* CHECKBOXES */
 
 .form-check-input[type="checkbox"] {
-	border-color: var(--ps-border-color);
+    border-color: var(--ps-border-color);
 }
 
 .form-check-input:checked {
-	background-color: var(--ps-prim-500);
+    background-color: var(--ps-prim-500);
     border-color: var(--ps-prim-500);
 }
 
@@ -676,29 +679,29 @@ tr>td:last-child {
 
 /* modals */
 
-.modal, 
+.modal,
 .modal textarea {
-    color:var(--ps-text)
+    color: var(--ps-text)
 }
 
-.modal label{
-    color:var(--ps-text-50)
+.modal label {
+    color: var(--ps-text-50)
 }
 
 .modal {
-	--bs-modal-border-width: 0;
-	--bs-modal-header-border-width: 0;
-	--bs-modal-footer-border-width: 0;
+    --bs-modal-border-width: 0;
+    --bs-modal-header-border-width: 0;
+    --bs-modal-footer-border-width: 0;
 }
 
 
 /* OFFCANVAS */
 
 .offcanvas.offcanvas-end {
-	top: 0;
-	right: 0;
-	width: 500px;
-	border-left: none;
+    top: 0;
+    right: 0;
+    width: 500px;
+    border-left: none;
 }
 
 /* h1, h2, h3 {
@@ -706,6 +709,71 @@ tr>td:last-child {
     letter-spacing: -.5px;
     font-weight: 700;
 } */
+
+/* DATEPICKER */
+
+.react-datepicker__portal {
+    background-color: var(--ps-shadow-color-lg);
+}
+
+.react-datepicker {
+    box-shadow: var(--ps-shadow-lg);
+    border: 1px solid var(--ps-border-color);
+    border-radius: 1rem;
+    overflow: hidden;
+    padding: 1rem;
+}
+
+.react-datepicker * {
+    color: var(--ps-text);
+    font-family: "Inter", "Helvetica", "Arial", sans-serif;
+}
+
+.react-datepicker__header {
+    background-color: white;
+    border-bottom: none;
+}
+
+.react-datepicker__current-month {
+    font-size: 1rem !important;
+    padding-bottom: .5rem;
+}
+
+.react-datepicker__day-names {
+    padding-top: 1rem
+}
+
+.react-datepicker__day {
+    font-weight: 400;
+    border-radius: 50rem !important;
+}
+
+.react-datepicker__day:hover {
+    background-color: var(--ps-gray-100);
+}
+
+.react-datepicker__day--outside-month {
+    color: var(--ps-text-50)
+}
+
+.react-datepicker__day--excluded {
+    color: var(--ps-text-25);
+    font-weight: 200;
+}
+
+.react-datepicker__day--selected {
+    border-radius: 50rem;
+    background-color: var(--ps-prim-700);
+    color: white;
+    font-weight: 600;
+}
+
+.react-datepicker__day--today {
+    font-weight: 500;
+    color: var(--ps-prim-600);
+    background-color: var(--ps-prim-50);
+}
+
 
 /* //////// */
 
@@ -726,29 +794,29 @@ table .dropdown-item {
 }
 
 .nav-link.active {
-	color: var(--ps-prim-600) !important;
+    color: var(--ps-prim-600) !important;
     background-color: var(--ps-prim-100);
     border-color: var(--ps-prim-100);
 }
 
 .nav-link.active:focus,
 .nav-link.active:hover {
-	color: var(--ps-prim-700) !important;
+    color: var(--ps-prim-700) !important;
     background-color: var(--ps-prim-100);
     border-color: var(--ps-prim-100);
 }
 
-.nav-link:focus, 
+.nav-link:focus,
 .nav-link:hover {
-	color: var(--ps-prim-500);
+    color: var(--ps-prim-500);
     background-color: var(--ps-prim-50);
     border-color: var(--ps-prim-50);
 }
 
 .nav-link.disabled {
-	color: var(--ps-gray-300);
-	pointer-events: none;
-	cursor: default;
+    color: var(--ps-gray-300);
+    pointer-events: none;
+    cursor: default;
 }
 
 .nav-main__logo {
@@ -801,13 +869,15 @@ body,
 
 .main::-webkit-scrollbar {
     display: none;
-  }
-  
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .main {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.main {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
 
 .card-footer {
     background-color: white;
@@ -843,7 +913,7 @@ td {
     .navbar-brand {
         margin-bottom: 3rem;
     }
-    
+
 }
 
 @media (max-width: 1200px) and (min-width: 768px) {
@@ -852,7 +922,7 @@ td {
     }
 
     .nav-link {
-        position:relative
+        position: relative
     }
 
     .nav-item>a {
@@ -889,15 +959,16 @@ td {
         text-overflow: ellipsis;
         max-width: 15ch;
     }
+
     tbody>tr::before {
         scale: 0;
         opacity: .5
     }
-  }
+}
 
 
 tr:hover:not(thead>tr) {
-    transition: all .1s ;
+    transition: all .1s;
 }
 
 .header-row {
@@ -905,32 +976,32 @@ tr:hover:not(thead>tr) {
 }
 
 .border {
-	border: var(--bs-border-width) var(--bs-border-style) var(--ps-border-color) !important;
+    border: var(--bs-border-width) var(--bs-border-style) var(--ps-border-color) !important;
 }
 
 .bg-secondary {
-	background-color: var(--ps-table-head-color) !important;
+    background-color: var(--ps-table-head-color) !important;
 }
 
 .table-ps {
-	--bs-table-color: var(--bs-body-color);
-	--bs-table-bg: white;
-	--bs-table-border-color: var(--ps-table-border-color);
-	--bs-table-accent-bg: transparent;
-	--bs-table-striped-color: var(--bs-body-color);
-	--bs-table-striped-bg: rgba(0, 0, 0, 0.05);
-	--bs-table-active-color: var(--bs-body-color);
-	--bs-table-active-bg: rgba(0, 0, 0, 0.1);
-	--bs-table-hover-color: var(--ps-prim-600);
-	--bs-table-hover-bg: var(--ps-prim-25);
+    --bs-table-color: var(--bs-body-color);
+    --bs-table-bg: white;
+    --bs-table-border-color: var(--ps-table-border-color);
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: var(--bs-body-color);
+    --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
+    --bs-table-active-color: var(--bs-body-color);
+    --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+    --bs-table-hover-color: var(--ps-prim-600);
+    --bs-table-hover-bg: var(--ps-prim-25);
 }
 
 .project-edit-icon {
     transition: all .15s ease;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.table-holder  {
+.table-holder {
     overflow-x: hidden;
     border-radius: 0.375rem;
     border: 1px solid var(--ps-border-color);
@@ -961,19 +1032,19 @@ tr:hover:not(thead>tr) {
 }
 
 .table--head>th>*>button:before {
-    content : "";
+    content: "";
     position: absolute;
-    left    : 0;
-    bottom  : 0;
-    height  : 1px;
-    width   : 0%; 
-    border-bottom:1px solid var(--ps-table-head-color-hover);
-    transition: all .3s cubic-bezier(.56,.29,.19,1.75);
+    left: 0;
+    bottom: 0;
+    height: 1px;
+    width: 0%;
+    border-bottom: 1px solid var(--ps-table-head-color-hover);
+    transition: all .3s cubic-bezier(.56, .29, .19, 1.75);
 }
 
 .table--head>th>*>button:hover::before {
-    height  : 1px;
-    width   : 100%; 
+    height: 1px;
+    width: 100%;
 }
 
 .table--head>th>*>.btn:hover {
@@ -993,7 +1064,7 @@ tr:hover:not(thead>tr) {
 }
 
 .weak {
-    color:#7a808d
+    color: #7a808d
 }
 
 .main--card {
@@ -1020,19 +1091,19 @@ light {
     position: relative;
 }
 
-span#status-0{
+span#status-0 {
     color: var(--ps-accent-1-600);
     border-radius: 2rem;
     background-color: var(--ps-accent-1-50);
 }
 
-span#status-1{
+span#status-1 {
     color: var(--ps-succ-600);
     border-radius: 2rem;
     background-color: var(--ps-succ-50);
 }
 
-span#status-2{
+span#status-2 {
     color: var(--ps-accent-2-700);
     border-radius: 2rem;
     background-color: var(--ps-accent-2-50);
@@ -1073,12 +1144,12 @@ span#status-2{
 }
 
 .dropdown-menu .dropdown-item:first-child {
-    position:relative;
+    position: relative;
 }
 
 .dropdown-menu {
-	border: var(--bs-dropdown-border-width) solid var(--ps-table-border-color);
-	border-radius: var(--bs-dropdown-border-radius);
+    border: var(--bs-dropdown-border-width) solid var(--ps-table-border-color);
+    border-radius: var(--bs-dropdown-border-radius);
     box-shadow: 0 0 1rem 1px var(--ps-shadow-hover);
     --bs-dropdown-padding-y: 0;
     padding: .5rem;
@@ -1134,7 +1205,7 @@ span.strong {
 
 .ps-tooltip {
     --bs-tooltip-bg: hsl(200, 15%, 26%);
-    --bs-tooltip-color:  white;
+    --bs-tooltip-color: white;
     margin: 0;
     padding: 0;
     border-radius: .5rem;
@@ -1142,14 +1213,14 @@ span.strong {
 }
 
 
-.filter-indicator >.btn {
+.filter-indicator>.btn {
     --bs-btn-color: var(--ps-btn-color);
     --bs-btn-bg: var(--ps-btn-bg);
     --bs-btn-border-color: var(--ps-btn-bg);
     --bs-btn-hover-color: var(--ps-btn-bg);
     --bs-btn-hover-bg: var(--ps-btn-color);
     --bs-btn-hover-border-color: var(--ps-btn-bg);
-    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
     --bs-btn-active-color: #fff;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     font-weight: 500;
@@ -1200,7 +1271,7 @@ span.strong {
 }
 
 .card-header {
-	border-bottom: none;
+    border-bottom: none;
     background-color: transparent;
     font-weight: 500;
     font-size: 14px;
